Split training and preprocessing. Added slurm scripts, moved personal variables to .env and new .slurm

--- a/.gitignore
+++ b/.gitignore
@@ -153,4 +153,6 @@ ipython_config.py
 # Explorations
 exploration/
 
+# Slurm file
+.slurm
 # End of https://mrkandreev.name/snippets/gitignore-generator/#Python,JupyterNotebooks
